# FedoraCoffee-backend

./: .gitignore  README.md  pyproject.toml
FedoraCoffee/: admin.py  apps.py
FedoraCoffee/migrations/: 0001_initial.py  0002_order.py
FedoraCoffee/models/: __init__.py  category.py  client.py  extra.py  item.py  order.py  orderExtra.py  order_extra.py  order_product.py  product.py
FedoraCoffee/serializers/: __init__.py  category.py  client.py  customProduct.py  extra.py  item.py  order.py  orderExtra.py  orderProduct.py  product.py
FedoraCoffee/views/: __init__.py  category.py  client.py  extra.py  order.py  orderExtra.py  orderProduct.py  product.py  products_by_category.py
FedoraCoffee/views/models/: item.py  orderExtra.py
config/: settings.py  urls.py
user/: admin.py  models.py  router.py  serializers.py  views.py
user/migrations/: 0001_initial.py
