[project]
name = "FedoraCoffee-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Enzo Lazzarin Dal'osto", email = "wecredsbr@gmail.com"},
]
dependencies = [
    "django>=5.0.3",
    "djangorestframework>=3.15.2",
    "setuptools>=72.1.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
